<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default">

    <ScrollView
        android:id="@+id/sv_container_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <me.sungbin.androidutils.ui.tagableroundimageview.TagableRoundImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/image_description_profile"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:triv_imageRadius="99dp" />

            <TextView
                android:id="@+id/tv_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce_name_label"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:text="@string/introduce_name_value"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

            <TextView
                android:id="@+id/tv_birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_twice"
                android:text="@string/introduce_birthday_label"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_value" />

            <TextView
                android:id="@+id/tv_birthday_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:text="@string/introduce_birthday_value"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_birthday_label" />

            <TextView
                android:id="@+id/tv_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_twice"
                android:text="@string/introduce_mail_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_birthday_value" />

            <TextView
                android:id="@+id/tv_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:text="@string/introduce_mail_value"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_label" />

            <TextView
                android:id="@+id/tv_title_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_twice"
                android:text="@string/introduce_bio_label"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_value" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:text="@string/introduce_bio_value"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_bio" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/hsv_container_links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_container_links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_github"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/margin_half"
                android:contentDescription="@string/image_description_github"
                android:scaleType="fitXY"
                android:src="@drawable/github" />

            <ImageView
                android:id="@+id/iv_devblog"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginEnd="@dimen/margin_half"
                android:contentDescription="@string/image_description_devblog"
                android:scaleType="fitXY"
                android:src="@drawable/devles" />

            <ImageView
                android:id="@+id/iv_homepage"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginEnd="@dimen/margin_half"
                android:contentDescription="@string/image_description_homepage"
                android:scaleType="fitXY"
                android:src="@drawable/homepage" />

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginEnd="@dimen/margin_half"
                android:contentDescription="@string/image_description_facebook"
                android:scaleType="fitXY"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/iv_instagram"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginEnd="@dimen/margin_half"
                android:contentDescription="@string/image_description_instagram"
                android:scaleType="fitXY"
                android:src="@drawable/instagram" />

            <ImageView
                android:id="@+id/iv_twitter"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginEnd="@dimen/margin_half"
                android:contentDescription="@string/image_description_twitter"
                android:scaleType="fitXY"
                android:src="@drawable/twitter" />

            <ImageView
                android:id="@+id/iv_youtube"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginEnd="@dimen/margin_half"
                android:contentDescription="@string/image_description_youtube"
                android:scaleType="fitXY"
                android:src="@drawable/youtube" />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>