<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default">

    <me.sungbin.androidutils.ui.tagableroundimageview.TagableRoundImageView
        android:id="@+id/iv_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_description_icon"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:triv_imageRadius="@dimen/margin_twice_and_half" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fbl_container_information"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_half"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center"
        app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_icon">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_twice_half"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice_half"
            android:gravity="center"
            android:text="@string/information_description"
            android:textColor="@color/colorLightGray" />

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fbl_container_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fbl_container_information">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_question"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_twice_half"
            android:text="@string/information_question" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_github"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_twice_half"
            android:text="@string/information_github" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dev_time"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice_half"
            android:layout_marginBottom="@dimen/margin_twice_half"
            android:text="@string/information_dev_time" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_use_zmobot"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice_half"
            android:layout_marginBottom="@dimen/margin_twice_half"
            android:text="@string/information_use_zmobot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mad_score"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice_half"
            android:layout_marginBottom="@dimen/margin_twice_half"
            android:text="@string/information_mad_score" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_opensource_license"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice_half"
            android:text="@string/information_opensource_license" />

    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_copyright"
        android:textColor="@color/colorTwiceLightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>