<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_default">

    <TextView
        android:id="@+id/tv_zmobot_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_zmobot_description"
        android:textColor="@color/colorBlack" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fbl_container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        app:alignItems="center"
        app:flexDirection="row"
        app:justifyContent="center">

        <ImageView
            android:id="@+id/iv_zmobot_qrcode"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="@dimen/margin_twice_half"
            android:contentDescription="@string/image_description_zmobot_qrcode"
            android:src="@drawable/zmobot" />

        <TextView
            android:id="@+id/tv_zmobot_add_frined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_twice_half"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/margin_half"
            android:text="@string/dialog_zmobot_add_friend"
            android:textColor="@color/colorBlack" />

    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>